syntax/y.output

state 0
	$accept: .chunk $end 
	block: .    (2)

	$end  reduce 2 (src line 75)
	error  shift 21
	TBreak  shift 12
	TDo  shift 14
	TFor  shift 18
	TFunction  shift 19
	TGoto  shift 13
	TIf  shift 17
	TLocal  shift 20
	TRepeat  shift 16
	TReturn  shift 6
	TWhile  shift 15
	TName  shift 26
	TTarget  shift 24
	'='  shift 9
	';'  shift 7
	.  error

	chunk  goto 1
	block  goto 2
	blockaux  goto 3
	stat  goto 5
	returnstat  goto 4
	varlist  goto 8
	functioncall  goto 10
	label  goto 11
	var  goto 22
	prefixexp  goto 23
	name  goto 25

state 1
	$accept:  chunk.$end 

	$end  accept
	.  error


state 2
	chunk:  block.    (1)

	.  reduce 1 (src line 67)


3: shift/reduce conflict (shift 21(0), red'n 3(0)) on error
3: shift/reduce conflict (shift 12(0), red'n 3(0)) on TBreak
3: shift/reduce conflict (shift 14(0), red'n 3(0)) on TDo
3: shift/reduce conflict (shift 18(0), red'n 3(0)) on TFor
3: shift/reduce conflict (shift 19(0), red'n 3(0)) on TFunction
3: shift/reduce conflict (shift 13(0), red'n 3(0)) on TGoto
3: shift/reduce conflict (shift 17(0), red'n 3(0)) on TIf
3: shift/reduce conflict (shift 20(0), red'n 3(0)) on TLocal
3: shift/reduce conflict (shift 16(0), red'n 3(0)) on TRepeat
3: shift/reduce conflict (shift 6(0), red'n 3(0)) on TReturn
3: shift/reduce conflict (shift 15(0), red'n 3(0)) on TWhile
3: shift/reduce conflict (shift 26(0), red'n 3(0)) on TName
3: shift/reduce conflict (shift 24(0), red'n 3(0)) on TTarget
3: shift/reduce conflict (shift 9(0), red'n 3(0)) on '='
3: shift/reduce conflict (shift 7(0), red'n 3(0)) on ';'
state 3
	block:  blockaux.    (3)
	block:  blockaux.returnstat 
	blockaux:  blockaux.stat 

	$end  reduce 3 (src line 78)
	error  shift 21
	TBreak  shift 12
	TDo  shift 14
	TElse  reduce 3 (src line 78)
	TElseIf  reduce 3 (src line 78)
	TEnd  reduce 3 (src line 78)
	TFor  shift 18
	TFunction  shift 19
	TGoto  shift 13
	TIf  shift 17
	TLocal  shift 20
	TRepeat  shift 16
	TReturn  shift 6
	TUntil  reduce 3 (src line 78)
	TWhile  shift 15
	TName  shift 26
	TTarget  shift 24
	'='  shift 9
	';'  shift 7
	.  error

	stat  goto 28
	returnstat  goto 27
	varlist  goto 8
	functioncall  goto 10
	label  goto 11
	var  goto 22
	prefixexp  goto 23
	name  goto 25

state 4
	block:  returnstat.    (4)

	.  reduce 4 (src line 81)


state 5
	blockaux:  stat.    (6)

	.  reduce 6 (src line 89)


6: shift/reduce conflict (shift 45(0), red'n 68(0)) on TFunction
6: shift/reduce conflict (shift 26(0), red'n 68(0)) on TName
state 6
	returnstat:  TReturn.    (68)
	returnstat:  TReturn.exprlist 
	returnstat:  TReturn.exprlist ';' 

	TFalse  shift 32
	TFunction  shift 45
	TNil  shift 31
	TNot  shift 41
	TTrue  shift 33
	TName  shift 26
	TAny  shift 36
	TString  shift 35
	TNumber  shift 34
	'-'  shift 40
	'#'  shift 42
	'~'  shift 43
	'('  shift 44
	'{'  shift 48
	.  reduce 68 (src line 689)

	exprlist  goto 29
	functioncall  goto 47
	var  goto 46
	expr  goto 30
	functiondef  goto 37
	prefixexp  goto 38
	tableconstructor  goto 39
	name  goto 49

state 7
	stat:  ';'.    (8)

	.  reduce 8 (src line 104)


state 8
	stat:  varlist.'=' exprlist 
	stat:  varlist.'=' 
	varlist:  varlist.',' var 
	varlist:  varlist.',' 

	'='  shift 50
	','  shift 51
	.  error


state 9
	stat:  '='.exprlist 

	TFalse  shift 32
	TFunction  shift 45
	TNil  shift 31
	TNot  shift 41
	TTrue  shift 33
	TName  shift 26
	TAny  shift 36
	TString  shift 35
	TNumber  shift 34
	'-'  shift 40
	'#'  shift 42
	'~'  shift 43
	'('  shift 44
	'{'  shift 48
	.  error

	exprlist  goto 52
	functioncall  goto 47
	var  goto 46
	expr  goto 30
	functiondef  goto 37
	prefixexp  goto 38
	tableconstructor  goto 39
	name  goto 49

state 10
	stat:  functioncall.    (12)
	prefixexp:  functioncall.    (139)

	$end  reduce 12 (src line 139)
	error  reduce 12 (src line 139)
	TBreak  reduce 12 (src line 139)
	TDo  reduce 12 (src line 139)
	TElse  reduce 12 (src line 139)
	TElseIf  reduce 12 (src line 139)
	TEnd  reduce 12 (src line 139)
	TFor  reduce 12 (src line 139)
	TFunction  reduce 12 (src line 139)
	TGoto  reduce 12 (src line 139)
	TIf  reduce 12 (src line 139)
	TLocal  reduce 12 (src line 139)
	TRepeat  reduce 12 (src line 139)
	TReturn  reduce 12 (src line 139)
	TUntil  reduce 12 (src line 139)
	TWhile  reduce 12 (src line 139)
	TName  reduce 12 (src line 139)
	TTarget  reduce 12 (src line 139)
	'='  reduce 12 (src line 139)
	';'  reduce 12 (src line 139)
	.  reduce 139 (src line 1119)


state 11
	stat:  label.    (13)

	.  reduce 13 (src line 147)


state 12
	stat:  TBreak.    (14)

	.  reduce 14 (src line 151)


13: shift/reduce conflict (shift 26(0), red'n 16(0)) on TName
state 13
	stat:  TGoto.name 
	stat:  TGoto.    (16)

	TName  shift 26
	.  reduce 16 (src line 163)

	name  goto 53

14: shift/reduce conflict (shift 21(0), red'n 2(0)) on error
14: shift/reduce conflict (shift 12(0), red'n 2(0)) on TBreak
14: shift/reduce conflict (shift 14(0), red'n 2(0)) on TDo
14: shift/reduce conflict (shift 18(0), red'n 2(0)) on TFor
14: shift/reduce conflict (shift 19(0), red'n 2(0)) on TFunction
14: shift/reduce conflict (shift 13(0), red'n 2(0)) on TGoto
14: shift/reduce conflict (shift 17(0), red'n 2(0)) on TIf
14: shift/reduce conflict (shift 20(0), red'n 2(0)) on TLocal
14: shift/reduce conflict (shift 16(0), red'n 2(0)) on TRepeat
14: shift/reduce conflict (shift 6(0), red'n 2(0)) on TReturn
14: shift/reduce conflict (shift 15(0), red'n 2(0)) on TWhile
14: shift/reduce conflict (shift 26(0), red'n 2(0)) on TName
14: shift/reduce conflict (shift 24(0), red'n 2(0)) on TTarget
14: shift/reduce conflict (shift 9(0), red'n 2(0)) on '='
14: shift/reduce conflict (shift 7(0), red'n 2(0)) on ';'
state 14
	stat:  TDo.block TEnd 
	stat:  TDo.block 
	block: .    (2)

	$end  reduce 2 (src line 75)
	error  shift 21
	TBreak  shift 12
	TDo  shift 14
	TElse  reduce 2 (src line 75)
	TElseIf  reduce 2 (src line 75)
	TEnd  reduce 2 (src line 75)
	TFor  shift 18
	TFunction  shift 19
	TGoto  shift 13
	TIf  shift 17
	TLocal  shift 20
	TRepeat  shift 16
	TReturn  shift 6
	TUntil  reduce 2 (src line 75)
	TWhile  shift 15
	TName  shift 26
	TTarget  shift 24
	'='  shift 9
	';'  shift 7
	.  error

	block  goto 54
	blockaux  goto 3
	stat  goto 5
	returnstat  goto 4
	varlist  goto 8
	functioncall  goto 10
	label  goto 11
	var  goto 22
	prefixexp  goto 23
	name  goto 25

15: shift/reduce conflict (shift 56(0), red'n 23(0)) on TDo
15: shift/reduce conflict (shift 45(0), red'n 23(0)) on TFunction
15: shift/reduce conflict (shift 26(0), red'n 23(0)) on TName
state 15
	stat:  TWhile.expr TDo block TEnd 
	stat:  TWhile.expr TDo block 
	stat:  TWhile.TDo block TEnd 
	stat:  TWhile.expr 
	stat:  TWhile.    (23)

	TDo  shift 56
	TFalse  shift 32
	TFunction  shift 45
	TNil  shift 31
	TNot  shift 41
	TTrue  shift 33
	TName  shift 26
	TAny  shift 36
	TString  shift 35
	TNumber  shift 34
	'-'  shift 40
	'#'  shift 42
	'~'  shift 43
	'('  shift 44
	'{'  shift 48
	.  reduce 23 (src line 226)

	functioncall  goto 47
	var  goto 46
	expr  goto 55
	functiondef  goto 37
	prefixexp  goto 38
	tableconstructor  goto 39
	name  goto 49

16: shift/reduce conflict (shift 21(0), red'n 2(0)) on error
16: shift/reduce conflict (shift 12(0), red'n 2(0)) on TBreak
16: shift/reduce conflict (shift 14(0), red'n 2(0)) on TDo
16: shift/reduce conflict (shift 18(0), red'n 2(0)) on TFor
16: shift/reduce conflict (shift 19(0), red'n 2(0)) on TFunction
16: shift/reduce conflict (shift 13(0), red'n 2(0)) on TGoto
16: shift/reduce conflict (shift 17(0), red'n 2(0)) on TIf
16: shift/reduce conflict (shift 20(0), red'n 2(0)) on TLocal
16: shift/reduce conflict (shift 16(0), red'n 2(0)) on TRepeat
16: shift/reduce conflict (shift 6(0), red'n 2(0)) on TReturn
16: shift/reduce conflict (shift 15(0), red'n 2(0)) on TWhile
16: shift/reduce conflict (shift 26(0), red'n 2(0)) on TName
16: shift/reduce conflict (shift 24(0), red'n 2(0)) on TTarget
16: shift/reduce conflict (shift 9(0), red'n 2(0)) on '='
16: shift/reduce conflict (shift 7(0), red'n 2(0)) on ';'
state 16
	stat:  TRepeat.block TUntil expr 
	stat:  TRepeat.block TUntil 
	stat:  TRepeat.block 
	block: .    (2)

	$end  reduce 2 (src line 75)
	error  shift 21
	TBreak  shift 12
	TDo  shift 14
	TElse  reduce 2 (src line 75)
	TElseIf  reduce 2 (src line 75)
	TEnd  reduce 2 (src line 75)
	TFor  shift 18
	TFunction  shift 19
	TGoto  shift 13
	TIf  shift 17
	TLocal  shift 20
	TRepeat  shift 16
	TReturn  shift 6
	TUntil  reduce 2 (src line 75)
	TWhile  shift 15
	TName  shift 26
	TTarget  shift 24
	'='  shift 9
	';'  shift 7
	.  error

	block  goto 57
	blockaux  goto 3
	stat  goto 5
	returnstat  goto 4
	varlist  goto 8
	functioncall  goto 10
	label  goto 11
	var  goto 22
	prefixexp  goto 23
	name  goto 25

17: shift/reduce conflict (shift 21(0), red'n 2(0)) on error
17: shift/reduce conflict (shift 12(0), red'n 2(0)) on TBreak
17: shift/reduce conflict (shift 14(0), red'n 2(0)) on TDo
17: shift/reduce conflict (shift 18(0), red'n 2(0)) on TFor
17: shift/reduce conflict (shift 61(0), red'n 2(0)) on TFunction
17: shift/reduce conflict (shift 13(0), red'n 2(0)) on TGoto
17: shift/reduce conflict (shift 17(0), red'n 2(0)) on TIf
17: shift/reduce conflict (shift 20(0), red'n 2(0)) on TLocal
17: shift/reduce conflict (shift 16(0), red'n 2(0)) on TRepeat
17: shift/reduce conflict (shift 6(0), red'n 2(0)) on TReturn
17: shift/reduce conflict (shift 15(0), red'n 2(0)) on TWhile
17: shift/reduce conflict (shift 26(0), red'n 2(0)) on TName
17: shift/reduce conflict (shift 24(0), red'n 2(0)) on TTarget
17: shift/reduce conflict (shift 9(0), red'n 2(0)) on '='
17: shift/reduce conflict (shift 7(0), red'n 2(0)) on ';'
state 17
	stat:  TIf.expr TThen block elseifs TEnd 
	stat:  TIf.expr TThen block elseifs 
	stat:  TIf.TThen block elseifs TEnd 
	stat:  TIf.block elseifs TEnd 
	stat:  TIf.block elseifs 
	stat:  TIf.expr TThen block elseifs TElse block TEnd 
	stat:  TIf.TThen block elseifs TElse block TEnd 
	stat:  TIf.expr TThen block elseifs TElse block 
	stat:  TIf.block elseifs TElse block TEnd 
	block: .    (2)

	$end  reduce 2 (src line 75)
	error  shift 21
	TBreak  shift 12
	TDo  shift 14
	TElse  reduce 2 (src line 75)
	TElseIf  reduce 2 (src line 75)
	TEnd  reduce 2 (src line 75)
	TFalse  shift 32
	TFor  shift 18
	TFunction  shift 61
	TGoto  shift 13
	TIf  shift 17
	TLocal  shift 20
	TNil  shift 31
	TNot  shift 41
	TRepeat  shift 16
	TReturn  shift 6
	TThen  shift 59
	TTrue  shift 33
	TUntil  reduce 2 (src line 75)
	TWhile  shift 15
	TName  shift 26
	TTarget  shift 24
	TAny  shift 36
	TString  shift 35
	TNumber  shift 34
	'-'  shift 40
	'#'  shift 42
	'~'  shift 43
	'='  shift 9
	'('  shift 44
	'{'  shift 48
	';'  shift 7
	.  error

	block  goto 60
	blockaux  goto 3
	stat  goto 5
	returnstat  goto 4
	varlist  goto 8
	functioncall  goto 10
	label  goto 11
	var  goto 22
	expr  goto 58
	functiondef  goto 37
	prefixexp  goto 38
	tableconstructor  goto 39
	name  goto 25

state 18
	stat:  TFor.name '=' expr ',' expr TDo block TEnd 
	stat:  TFor.name '=' expr ',' expr TDo block 
	stat:  TFor.'=' expr ',' expr TDo block TEnd 
	stat:  TFor.TDo block TEnd 
	stat:  TFor.TDo block 
	stat:  TFor.name TDo block TEnd 
	stat:  TFor.name '=' TDo block TEnd 
	stat:  TFor.name '=' expr TDo block TEnd 
	stat:  TFor.name '=' expr ',' TDo block TEnd 
	stat:  TFor.name '=' expr ',' expr ',' expr TDo block TEnd 
	stat:  TFor.name '=' expr ',' expr ',' TDo block TEnd 
	stat:  TFor.name '=' expr ',' expr ',' expr TDo block 
	stat:  TFor.namelist TIn exprlist TDo block TEnd 
	stat:  TFor.TIn exprlist TDo block TEnd 
	stat:  TFor.namelist TIn TDo block TEnd 
	stat:  TFor.namelist TIn exprlist TDo block 
	stat:  TFor.namelist TIn exprlist 

	TDo  shift 64
	TIn  shift 66
	TName  shift 26
	'='  shift 63
	.  error

	namelist  goto 65
	name  goto 62

state 19
	stat:  TFunction.funcname funcbody 
	stat:  TFunction.funcname 

	TName  shift 26
	':'  shift 69
	'.'  shift 71
	.  error

	funcname  goto 67
	funcnameaux  goto 68
	name  goto 70

20: shift/reduce conflict (shift 72(0), red'n 64(0)) on TFunction
20: shift/reduce conflict (shift 26(0), red'n 64(0)) on TName
20: shift/reduce conflict (shift 75(0), red'n 64(0)) on '='
state 20
	stat:  TLocal.TFunction name funcbody 
	stat:  TLocal.TFunction funcbody 
	stat:  TLocal.name funcbody 
	stat:  TLocal.TFunction name 
	stat:  TLocal.TFunction 
	stat:  TLocal.namelist '=' exprlist 
	stat:  TLocal.namelist '=' 
	stat:  TLocal.'=' exprlist 
	stat:  TLocal.namelist 
	stat:  TLocal.    (64)

	TFunction  shift 72
	TName  shift 26
	'='  shift 75
	.  reduce 64 (src line 657)

	namelist  goto 74
	name  goto 73

state 21
	stat:  error.    (65)

	.  reduce 65 (src line 664)


state 22
	varlist:  var.    (84)
	prefixexp:  var.    (138)

	'='  reduce 84 (src line 803)
	','  reduce 84 (src line 803)
	.  reduce 138 (src line 1116)


state 23
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'[' ']' 
	var:  prefixexp.'[' expr 
	var:  prefixexp.'[' 
	var:  prefixexp.'.' TName 
	var:  prefixexp.'.' 
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' name args 
	functioncall:  prefixexp.':' name 
	functioncall:  prefixexp.':' 

	TString  shift 82
	'('  shift 80
	'{'  shift 48
	'['  shift 76
	':'  shift 79
	'.'  shift 77
	.  error

	args  goto 78
	tableconstructor  goto 81

24: shift/reduce conflict (shift 26(0), red'n 75(0)) on TName
24: shift/reduce conflict (shift 84(0), red'n 75(0)) on TTarget
state 24
	label:  TTarget.name TTarget 
	label:  TTarget.name 
	label:  TTarget.TTarget 
	label:  TTarget.    (75)

	TName  shift 26
	TTarget  shift 84
	.  reduce 75 (src line 739)

	name  goto 83

state 25
	label:  name.TTarget 
	var:  name.    (87)

	TTarget  shift 85
	.  reduce 87 (src line 814)


state 26
	name:  TName.    (94)
	name:  TName.TAType 
	name:  TName.TSType 

	TAType  shift 86
	TSType  shift 87
	.  reduce 94 (src line 865)


state 27
	block:  blockaux returnstat.    (5)

	.  reduce 5 (src line 84)


state 28
	blockaux:  blockaux stat.    (7)

	.  reduce 7 (src line 96)


29: shift/reduce conflict (shift 88(0), red'n 69(0)) on ';'
state 29
	returnstat:  TReturn exprlist.    (69)
	returnstat:  TReturn exprlist.';' 
	exprlist:  exprlist.',' expr 
	exprlist:  exprlist.',' 

	';'  shift 88
	','  shift 89
	.  reduce 69 (src line 693)

